--- a/CaroProject/CaroProject.vcxproj
+++ b/CaroProject/CaroProject.vcxproj
@@ -138,7 +138,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BoardExecute.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerExecute.cpp" />
+    <ClCompile Include="PointExecute.cpp" />
+    <ClCompile Include="RoundExecute.cpp" />
+    <ClCompile Include="ScreenExecute.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Point.h" />
+    <ClInclude Include="Round.h" />
+    <ClInclude Include="Screen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
